SERVER-86945 Make $jsonSchema with $field in properties reparseable (#21365)

GitOrigin-RevId: 7bea8a0f5d29c939aae096a06a677dcff2b6870d